--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         <!--=======================OUR TEAM==================================-->
         
-        <!--<section class="team section">
+        <section class="team section">
            <div class="container">
             <h2 class="section__title">Наша команда</h2>
             <ul class="team-list">
@@ -368,7 +368,7 @@
             </ul>
            </div>
 
-        </section>-->
+        </section>
 
         <!--===================REGULAR CLIENTS===============================-->
 
