сделала стили для Клиентов

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
         <!--===================REGULAR CLIENTS===============================-->
 
-       <!-- <section class="section">
+       <section class="section">
             <div class="container">
                 <h2 class="section__title">Постоянные клиенты</h2>
                 <ul class="clients">
@@ -426,7 +426,7 @@
                 </ul>
     
             </div>
-        </section>-->
+        </section>
 
     </main>
 
