--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
     </main>
 
     <!--===========================FOOTER======================================-->
-    <!--<footer class="footer">
+    <footer class="footer">
         <div class="container footer-container">
           <div class="footer-contacts">
             <a class="logo" href=""><span class="logo__first-word">Web</span><span class="logo__second-word">Studio</span></a>
@@ -499,7 +499,7 @@
              </form>
           </div>
         </div>
-    </footer>-->
+    </footer>
 
     <!--============================MODAL BOX==================================-->
     <!--<div class="backdrop is-hidden" data-modal>
