сделала секцию Герой

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <main>
         <!--========================HERO======================================-->
-       <!-- <section class="hero-section">
+       <section class="hero-section">
             <div class="container hero">
                 <h1 class="hero-section__title">
                     эффективные решения для вашего бизнеса
@@ -65,7 +65,7 @@
                     Заказать услугу
                 </button>
             </div>
-        </section>-->
+        </section>
 
         <!--=========================FEATURES=================================-->
         <section class="section">
